--- a/trellis/group_vars/development/vault.yml
+++ b/trellis/group_vars/development/vault.yml
@@ -1,10 +1,10 @@
 # Documentation: https://roots.io/trellis/docs/vault/
-vault_mysql_root_password: devpw
+vault_mysql_root_password: dvadmin
 
 # Variables to accompany `group_vars/development/wordpress_sites.yml`
 # Note: the site name (`example.com`) must match up with the site name in the above file.
 vault_wordpress_sites:
-  dogvacay.com:
-    admin_password: admin
+  dogvacay.dev:
+    admin_password: dvadmin
     env:
-      db_password: example_dbpassword
+      db_password: dvadmin
